src/test/ui-fulldeps/proc-macro/multispan.stderr
error: hello to you, too!
  --> $DIR/multispan.rs:25:5
   |
LL |     hello!(hi); //~ ERROR hello to you, too!
   |     ^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:25:12
   |
LL |     hello!(hi); //~ ERROR hello to you, too!
   |            ^^

error: hello to you, too!
  --> $DIR/multispan.rs:28:5
   |
LL |     hello!(hi hi); //~ ERROR hello to you, too!
   |     ^^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:28:12
   |
LL |     hello!(hi hi); //~ ERROR hello to you, too!
   |            ^^ ^^

error: hello to you, too!
  --> $DIR/multispan.rs:31:5
   |
LL |     hello!(hi hi hi); //~ ERROR hello to you, too!
   |     ^^^^^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:31:12
   |
LL |     hello!(hi hi hi); //~ ERROR hello to you, too!
   |            ^^ ^^ ^^

error: hello to you, too!
  --> $DIR/multispan.rs:34:5
   |
LL |     hello!(hi hey hi yo hi beep beep hi hi); //~ ERROR hello to you, too!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:34:12
   |
LL |     hello!(hi hey hi yo hi beep beep hi hi); //~ ERROR hello to you, too!
   |            ^^     ^^    ^^           ^^ ^^

error: hello to you, too!
  --> $DIR/multispan.rs:35:5
   |
LL |     hello!(hi there, hi how are you? hi... hi.); //~ ERROR hello to you, too!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:35:12
   |
LL |     hello!(hi there, hi how are you? hi... hi.); //~ ERROR hello to you, too!
   |            ^^        ^^              ^^    ^^

error: hello to you, too!
  --> $DIR/multispan.rs:36:5
   |
LL |     hello!(whoah. hi di hi di ho); //~ ERROR hello to you, too!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:36:19
   |
LL |     hello!(whoah. hi di hi di ho); //~ ERROR hello to you, too!
   |                   ^^    ^^

error: hello to you, too!
  --> $DIR/multispan.rs:37:5
   |
LL |     hello!(hi good hi and good bye); //~ ERROR hello to you, too!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: found these 'hi's
  --> $DIR/multispan.rs:37:12
   |
LL |     hello!(hi good hi and good bye); //~ ERROR hello to you, too!
   |            ^^      ^^

error: aborting due to 7 previous errors

